# TC2-BBS-mesh

./: .gitignore  Dockerfile  README.md  command_handlers.py  config.ini  config_init.py  db_admin.py  db_operations.py  entrypoint.sh  example_config.ini  fortunes.txt  game_line_offset_fix.py  gamefile_syntax.md  js8call_integration.py  mesh-bbs.service  message_processing.py  pyproject.toml  removecomma.py  requirements.txt  server.py  text.py  utils.py  validate_game.py
config/: config.ini.sample
docker/: Dockerfile  auto_docker_install_debian.sh  configini.sh  docker-compose.yaml
examples/: example_RulesOfAcquisition_fortunes.txt
games/: forgotten_ruins_gpt.csv  lost_forest.csv  lost_forest_no_title  testing.txt  the_shortest_game.csv
