[tool.poetry]
name = "tc2-bbs-mesh"
version = "0.1.0"
description = "This is the TC²-BBS system integrated with Meshtastic devices. The system allows for message handling, bulletin boards, mail systems, and a channel directory."
authors = ["TheCommsChannel"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pypubsub = "^4.0.3"
meshtastic = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
